# onlineweb4

./: .babelrc  .coveragerc  .dockerignore  .drone.sec  .drone.yml  .drone.yml.sig  .editorconfig  .eslintrc.js  .frigg.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .snyk  .stylelintrc.js  CONTRIBUTING.md  Celery.Dockerfile  DOCker.md  Db.Dockerfile  Django.Dockerfile  Dockerfile  Dockerfile.django  Dockerfile.prod  Dockerfile.testbase  Dockerfile.testbase-prod  Dockerfile.webpack  LICENSE  Makefile  Production.Dockerfile  README.md  Testbase.Dockerfile  Vagrantfile  Webpack.Dockerfile  bootstrap.py  branch-cleaning.sh  codecov.yml  d.json  db._bak  (+34 more)
.devcontainer/: .ow4.env  Dockerfile  devcontainer.env  devcontainer.json  docker-compose.build.yml  docker-compose.no-deps-build.yml  docker-compose.no-deps.yml  docker-compose.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: build-devcontainer.yml  codeql-analysis.yml  deploy-canary.yml  deploy-dev.yml  deploy-docker.yml  deploy-prod.yml  deploy-release.yml  deploy.yml  deploy_dev.yml  deploy_prod.yml  devcontainer-no-deps.yml  devcontainer-with-deps.yml  devcontainer.yml  linter.yml  main.yml  publish.yml
api/: urls.py
apps/api/: __init__.py  appconfig.py  permissions.py  settings.py  tests.py  urls.py  userinfo.py  utils.py  views.py
apps/approval/: __init__.py  admin.py  appconfig.py  forms.py  models.py  settings.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/article/: __init__.py  admin.py  api.py  appconfig.py  apps.py  feedback.txt  fields.py  filters.py  forms.py  models.py  notifications.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py  widgets.py
apps/authentication/: __init__.py  admin.py  appconfig.py  apps.py  auth0.py  backends.py  constants.py  decorators.py  fields.py  forms.py  graphql_schema.py  models.py  mommy.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
apps/autoconfig/: __init__.py  appconfig.py  tests.py  urls.py  views.py
apps/careeropportunity/: __init__.py  admin.py  appconfig.py  apps.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/chunksapi/: __init__.py  appconfig.py  serializers.py  urls.py  views.py
apps/committeeupdates/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/companyprofile/: __init__.py  admin.py  appconfig.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/companys/: models.py
apps/contact/: appconfig.py  apps.py  forms.py  urls.py  views.py
apps/contribution/: admin.py  apps.py  models.py  mommy.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/dashboard/: __init__.py  admin.py  appconfig.py  forms.py  models.py  tools.py  urls.py  views.py  widgets.py
apps/dataporten/: __init__.py  appconfig.py  client.py  models.py  settings.py  urls.py  views.py
apps/events/: __init__.py  admin.py  api.py  appconfig.py  constants.py  exceptions.py  feeds.py  filters.py  forms.py  models.py  mommy.py  notifications.py  pdf_generator.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/feedback/: __init__.py  admin.py  answers.py  appconfig.py  apps.py  feedback_mails.py  forms.py  models.py  mommy.py  permissions.py  questions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/fiken/: admin.py  apps.py  constants.py  models.py  pdf_generator.py  serializers.py  settings.py  tasks.py  utils.py
apps/gallery/: __init__.py  admin.py  appconfig.py  apps.py  constants.py  fields.py  forms.py  models.py  serializers.py  settings.py  signals.py  tests.py  urls.py  util.py  views.py  widgets.py
apps/genfors/: 4  __init__.py  appconfig.py  forms.py  models.py  urls.py  utils.py  views.py
apps/gsuite/: __init__.py  admin.py  appconfig.py  apps.py  auth.py  constants.py  models.py  serializers.py  utils.py
apps/hobbygroups/: admin.py  appconfig.py  models.py  serializers.py  settings.py  urls.py  views.py
apps/inventory/: __init__.py  admin.py  appconfig.py  apps.py  graphql_schema.py  models.py  serializers.py  views.py
apps/ldap/: README.md  __init__.py  appconfig.py  ldap.py  ldap_models.py
apps/lillebror/: __init__.py  appconfig.py  models.py  serializers.py  urls.py  views.py
apps/mailinglists/: __init__.py  admin.py  appconfig.py  filters.py  models.py  sampy.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/marks/: __init__.py  admin.py  api.py  appconfig.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/mommy/: Readme.md  __init__.py  appconfig.py  models.py  registry.py  utils.py
apps/news/: models.py
apps/notifications/: __init__.py  admin.py  appconfig.py  apps.py  constants.py  dispatcher.py  handler.py  (+9 more)
config/: ow4.dev.env
docker/: Django.Dockerfile  Dockerfile.django  Dockerfile.prod  Dockerfile.prod.dockerignore  Dockerfile.webpack  Dockerfile.zappa  Dockerfile.zappa.dockerignore  StaticBuild.Dockerfile  StaticBuild.Dockerfile.dockerignore  Webpack.Dockerfile  Zappa.Dockerfile  Zappa.Dockerfile.dockerignore  docker-compose.yml
docs/: Makefile  conf.py  index.rst  make.bat
feedme/: README.md  api.py  forms.py  models.py  requirements.txt  tests.py  urls.py  views.py
middleware/: cors.py  healthcheck.py  http.py
onlineweb4/: assets.py  celery.py  context_processors.py  forms.py  permissions.py  schema.py  settings.py  storage_backends.py  testing.py  urls.py  views.py  wsgi.py
scripts/: fix_image_data.py  update_sympa_memcache_from_sql.py
templates/: 403.html  404.html  500.html  base.html  base_site.html  dashboard.html  dashboard_base.html  frontpage.html  frontpage_offline.html  robots.txt  wiki_base.html
utils/: admin.py  disable_for_loaddata.py  email.py  helpers.py  ldap.py  ldap_models.py  metadata.py  pagination.py  shortcuts.py
vagrant/: Vagrantfile  vagrantbootstrap.sh
(+1866 files in other folders)
