[tool.poetry]
name = "onlineweb4"
version = "1.0.0"
description = "Web pages for Online, Linjeforeningen for Informatikk at NTNU"
authors = ["dotkom <dotkom@online.ntnu.no>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
Django = "~5.0"
djangorestframework = "~3.15"
django-filter = "~24.2"
pillow = "~10.3"
stripe = "~3.5"
icalendar = "~5.0"
google-api-python-client = "~2.131"
django-chunks = { git = "https://github.com/dotkom/django-chunks.git", rev = "5c01b06f40122c05d2a806f9872b07215ffc33ac" }
django-crispy-forms = "~2.1"
crispy-bootstrap3 = "^2024.1"
django-dynamic-fixture = "~4.0"
django-watson = "~1.6.2"            # Indexed model search lib
django-reversion = "~5.0"           # Model version history with middleware hooks to all post_save signals
django-guardian = "~2.4"            # Per Object permissions framework
django-taggit = "~5.0"              # Generic multi-model tagging library
pdfdocument = "~4.0"
Unidecode = "~1.3"                  # Translates every unicode symbol to the closest ascii. online_mail_usernames
django-markdown-deux = "~1.0"
django-cors-headers = "~4.3"        # Enable CORS for Nibble
django-webpack-loader = "~3.1"      # Integration with webpack
dj-database-url = "~2.2"            # Allows to configure databases using URLs
python-decouple = "~3.8"            # Configuration and settings management
oic = "~1.7"			            # OpenID Connect Client
requests = { version = "~2.32", extras = [ "security" ] }
# Wiki
wiki = "~0.11"

django-js-reverse = "~0.10"
pyyaml = "^6.0"
pywebpush = "^2.0.0"

# Monitoring
sentry-sdk = { version = "~2.3", extras = [ "django" ] }

# AWS
boto3 =  { version = "~1.34", optional = true }
django-ses = { version = "~4.1", optional = true }
zappa = { version = "~0.59", optional = true }
django-storages = { version = "~1.14", extras = ["s3"], optional = true }
# psyco postgresql
psycopg2-binary = "~2.9"
mozilla-django-oidc = "^4.0.0"
auth0-python = "^4.7.0"
drf-spectacular = "^0.27.1"
django-turnstile = "^0.1.0"


[tool.poetry.group.dev.dependencies]
# Testing
pytest = "~8.2"
pytest-cov = "~5.0"
pytest-django = "~4.8"
pytest-xdist = "~3.6"
freezegun = "~1.5"
coverage = { version = "~7.5", extras = [ "toml" ] }

# Linting
ruff = "~0.4"
pre-commit = "~3.7"

[tool.poetry.extras]
# only required for running in production on AWS
prod = [
    "psycopg2-binary",
    "boto3",
    "django-ses",
    "zappa",
    "django-storages",
]
s3 = ["django-storages"]


[tool.ruff]
src = [ "apps", "utils", "onlineweb4", "scripts" ]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    # "UP", # pyupgrade
    # "B", # flake8-bugbear
    # "SIM", # flake8 simplify
    # "C901", # Mccabe complexiy
    "F", # Pyflakes
    "I", # isort
]
ignore = ["E501"]
extend-per-file-ignores = { "__init__.py" = ["F403"] }

[tool.ruff.lint.isort]
known-first-party = ["apps", "utils", "onlineweb4", "scripts"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "onlineweb4.settings"
norecursedirs = [ ".*",  "env*", "tmp*" ]
python_files = [ "tests.py", "*_tests.py" ]
addopts = "--nomigrations -n auto --dist loadgroup"
filterwarnings = [
    # for future maintainers: these fields are documented here
    # https://docs.python.org/3/library/warnings.html#the-warnings-filter
    # we should probably care about OpenAPI-warnings, but they are extremely noisy
    "ignore:You have a duplicated operationId in your OpenAPI schema:UserWarning",
    "ignore:<class '.*'> is not compatible with schema generation:UserWarning",
    # remove once migrated, this is just setting a transitional setting
    "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated.:django.utils.deprecation.RemovedInDjango60Warning",
    "ignore:The default scheme will be changed from 'http' to 'https' in Django 6.0.*:django.utils.deprecation.RemovedInDjango60Warning",
    "ignore:ast.NameConstant is deprecated and will be removed in Python 3.14; use ast.Constant instead:DeprecationWarning",
]

[tool.coverage.report]
omit = [
    "apps/**/migrations/*",
    "apps/**/tests/*",
    "apps/**/tests.py",
    "apps/**/test_*.py",
    "onlineweb4/settings/**",
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

